<resources>
    <string name="app_name">WatchingYou</string>
    <string name="card_photo_description">Description</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="position">Position</string>
    <string name="email">Email</string>
    <string name="menu_item_setting_title">Setting</string>
    <string name="person">Employee</string>
    <string name="action_search">Search</string>
    <string name="name_surname">Full name</string>
    <string name="btn_card_come">Has come</string>
    <string name="btn_card_away">Gone</string>
    <string name="title_save_ok">Data saved successfully.</string>
    <string name="title_save_error">Error! No data saved.</string>
    <string name="tv_status_title_absent">ABSENT</string>
    <string name="tv_status_title_working">WORKING</string>
    <string name="input_person_title">New person</string>
    <string name="save_title">Save</string>
    <string name="menu_item_input_person_title">New person</string>
    <string name="menu_item_update_title">Update</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="notifications">Notifications</string>
    <string name="font_size">Font size</string>
    <string name="font_size_summary">Sets the new font size</string>
    <string name="font_size_dialog_title">Enter font size (from 10 to 32)</string>
    <string name="text_style_title">Font style</string>
    <string name="text_style_summary">Sets the font style</string>
    <string name="text_style_dialog_title">Choose font style</string>
    <string name="category_font_size">Font settings</string>
    <string name="category_language">Language settings</string>
    <string name="language_english">English</string>
    <string name="language_en_summary">Sets English language</string>
    <string name="language_russian">Russian</string>
    <string name="language_ru_summary">Sets Russian language</string>
    <string name="lang_summary">Language selection</string>
    <string name="lang_title">Sets the language</string>
    <string name="theme_style_title">Theme style</string>
    <string name="theme_style_summary">Sets the new theme</string>
    <string name="theme_style_dialog_title">Choose theme style</string>
    <string name="lang_choice_dialog_title">Choose language</string>
    <string name="lang_choice">lang_choice</string>
    <string name="dialog_button_ok">Ok</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_title_save">Do you want to save the data?</string>
    <string name="dialog_title_delete">Do you want to delete an employee?</string>
    <string name="title_delete_ok">Employee delete successfully.</string>
    <string name="title_delete_error">Error! No employee delete.</string>
    <string name="text_error_field_is_empty">Error! The field must not be empty!</string>
    <string name="text_error_field_min_length">Error! The field cannot have less than 2 characters!</string>
    <string name="text_new_employee">New Employee</string>
    <string name="info_status_work">Employees at Work :</string>
    <string name="info_status_absents">Absent :</string>
    <string name="file_provider">com.example.android.fileprovider</string>
    <string name="text_file_create_error">Файл не создан</string>
</resources>
