<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item_update"
        android:icon="@drawable/ic_update_white_24dp"
        android:orderInCategory="150"
        android:title="@string/menu_item_update_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_item_setting"
        android:title="@string/menu_item_setting_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_input_person"
        android:title="@string/menu_item_input_person_title"
        app:showAsAction="never" />

</menu>