<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="8dp">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/MainToolbar"
        app:navigationIcon="@android:drawable/ic_menu_revert"
        app:title="@string/person" />

    <ImageView
        android:id="@+id/card_photo"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.02"
        app:srcCompat="@drawable/ic_photo" />

    <TextView
        android:id="@+id/card_name"
        style="?attr/editTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/name_surname"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_photo" />

    <TextView
        android:id="@+id/card_phone"
        style="?attr/editTextStyle"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/phone"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_name" />

    <TextView
        android:id="@+id/card_position"
        style="?attr/editTextStyle"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/position"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_name" />

    <Button
        android:id="@+id/button_come"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_card_come"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_phone" />

    <Button
        android:id="@+id/button_away"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="50dp"
        android:text="@string/btn_card_away"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_phone" />

</android.support.constraint.ConstraintLayout>